tests/testfiles/valid/arithmetics/subtraction_and_multiplication.c
int main() {
    int a = 8;
    int b = 4;
    int c = 2;
    int result = (a - b) * c;
    return result;
}
