tests/testfiles/invalid/arithmetics/keyword_id.c
int main() {
    int int = 10;
    return 0;
}
